should hopefully fix alignment for line up?

--- a/styles.css
+++ b/styles.css
@@ -21,18 +21,21 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:30px solid red;
-  border-radius:30px;
+  width: 50px;
+  height: 50px;
+  background: red;
+  border-radius: 50%;
   position:absolute;
 }
 .picture{
   border:0px none ;
   border-radius: 0px;
+  background: none;
   position:absolute;
 }
 
 .heart {
-    position: relative;
+    position: absolute;
     width: 100px;
     height: 90px;
 }
@@ -77,9 +80,7 @@ body, a:link, a:visited, a:active{
   height: auto;
 }
 
-.flexcontainer {
-   display: -webkit-flex;
-   display: flex;
-   -webkit-flex-direction: row;
-   flex-direction: row;
+.container {
+  display: flex;
+  justify-content: space-between;
 }
